-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
Qt Creator 3.1.0-rc1
-
None
-
Windows 7
QProcess:terminate() does not kill processes not handling their event loop on Windows.
With a bugfix for QTBUG-38185 this means we do not not "kill" the qml2puppets.
Looks like for Windows we need an ensure termination with a higher timeout then 3 seconds.
For Gerrit Dashboard: QTCREATORBUG-12000 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
85226,1 | QmlDesigner: Kill a process if terminate is not working | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |