QmlDesigner: Kill a process if terminate is not working

Task-number: QTCREATORBUG-12000
Change-Id: I44ccbabefa94fd0136941d3adae37e744df139d5
Reviewed-by: Thomas Hartmann <Thomas.Hartmann@digia.com>